add parser + dependencies

--- a/StyleguideGenerator/.classpath
+++ b/StyleguideGenerator/.classpath
@@ -2,5 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="/Users/zacharycarr/Downloads/cssparser-0.9.24.jar"/>
+	<classpathentry kind="lib" path="/Users/zacharycarr/Downloads/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/zacharycarr/Downloads/Users/zacharycarr/Downloads/sac-1.3 2/sac.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
